--- a/views/anasayfa.erb
+++ b/views/anasayfa.erb
@@ -40,40 +40,32 @@
 <div class="slider white">
 	<ul class="slides">
 		<li>
-			<a href="">
-				<img id="slide1" src="./images/belarus3.jpg"> <!-- random image -->
-				<div class="caption left-align flow-text">
-					<h5 class="slide-text">Kronospan, Belarus'taki yeni tesisi için BERSEY ile antlaşmaya vardı</h5>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plant construction(60MW) </h6>
-				</div>
-			</a>
+			<img id="slide1" src="./images/belarus3.jpg"> 
+			<div class="caption left-align flow-text">
+				<h5 class="slide-text">Kronospan, Belarus'taki yeni tesisi için BERSEY ile antlaşmaya vard</h5>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plant construction(60MW) </h6>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide2" src="./images/belarus.jpg">
-				<div class="caption left-align flow-text">
-					<h5 class="slide-text">Pinskdrev BERSEY ile antlaşmaya vardı</h5>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Kurulum yakında başlamak üzere</h6>
-				</div>
-			</a>
+			<img id="slide2" src="./images/belarus.jpg">
+			<div class="caption left-align flow-text">
+				<h5 class="slide-text">Pinskdrev BERSEY ile antlaşmaya vardı</h5>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Kurulum yakında başlamak üzere</h6>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide3" src="./images/slide3.jpg"> 
-				<div class="caption right-align flow-text">
-					<h5 class="slide-text">Rusya ve Romanya'daki projeler işletmeye alındı</h5>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">MDF üretim tesisleri</h6>
-				</div>
-			</a>
+			<img id="slide3" src="./images/slide3.jpg"> 
+			<div class="caption right-align flow-text">
+				<h5 class="slide-text">Rusya ve Romanya'daki projeler işletmeye alındı</h5>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">MDF üretim tesisleri</h6>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide4" src="./images/slide4.jpg"> 
-				<div class="caption center-align flow-text">
-					<h5 class="slide-text">CNRS Fransa, BERSEY ile AR-GE calışmalarını sürdürüyor.</h5>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Gazlaştırılmış Kömür Projesi</h6>
-				</div>
-			</a>
+			<img id="slide4" src="./images/slide4.jpg"> 
+			<div class="caption center-align flow-text">
+				<h5 class="slide-text">CNRS Fransa, BERSEY ile AR-GE calışmalarını sürdürüyor.</h5>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Gazlaştırılmış Kömür Projesi</h6>
+			</div>
 		</li>
 	</ul>
 </div>
