--- a/views/en/aboutus.erb
+++ b/views/en/aboutus.erb
@@ -1,21 +1,24 @@
 <div class = "container">
     <div class="section">
         <div class="row">
-            <div class="col l10">
+            <div class="col l10 light">
             <br>
             <br>
             <br>
             <br>
-                <h4>ABOUT US</h4>
-                <div class="divider blue-grey darken-4"></div>
                 <h5>We deliver technical excellence to manage complex projects for our clients.</h5>
+                <div class="divider blue-grey darken-4"></div>
                 <br>
-                <p>Bersey Limited Company, established in 1979, is an engineering company serving to different process industries where heat generation is required.</p>
                 <br>
-                <p>Bersey with headquarters in Istanbul, Turkey, employs around 100 people and operates two production facilities. Our engineers at Bersey are experts in industrial boiler manufacturing and heat generation systems.</p>
+                <p>BERSEY Ltd., established in 1979, is an engineering company serving to different process industries where heat generation is required.</p>
                 <br>
-                <p>We design and deliver complete heat generation systems -all its own design- that are oil fired, gas fired, waste fired, biomass fired, oil and gas co-fired. It is our main priority to supply "engineered solutions" to our costumers together with total manufacturing and quality satisfaction conforming with the international codes and standards that apply.</p>
-                </p>
+                <p>We design and deliver industrial heat generation systems -all custom design- that are oil fired, gas fired, waste fired, biomass fired, oil and gas co-fired. It is our main priority to supply "engineered solutions" to our costumers together with total manufacturing and quality satisfaction conforming with the international codes and standards that apply.</p>
+                <br>
+                <p>Bersey with headquarters in Istanbul, has ongoing projects in Turkey, Belarus, Romania, Bulgaria and Russia, installing industrial heat generation facilites fueled by wood waste, biomass and fossil fuels.</p>
+                <br>
+                <p>As part of the Research and Development project in Brown Coal Gasification to increase burning efficiency, we have collaborated with academics at METU, ITU, Marmara, Aegean and Isparta Universities, as well as with French CNRS Laboratories. We have also been in co-operation with Steinmüller Engineering and Thermax for the development of high capacity steam boilers.</p>
+                <br>
+                <p>In response to our clients’ requests, we always strive to deliver projects with improved efficiency, cost-effectiveness and in harmony with ecology.</p>
                 <br>
             </div>
         </div>
