--- a/views/en/home.erb
+++ b/views/en/home.erb
@@ -40,40 +40,32 @@
 <div class="slider white">
 	<ul class="slides">
 		<li>
-			<a href="">
-				<img id="slide1" src="../../images/belarus3.jpg"> <!-- random image -->
-				<div class="caption left-align">
-					<h5 class="slide-text">Kronospan-Smorgon signed a deal with BERSEY in Belarus</h3>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plant construction(60MW) will commence in 2017</h5>
-				</div>
-			</a>
+			<img id="slide1" src="../../images/belarus3.jpg"> <!-- random image -->
+			<div class="caption left-align">
+				<h5 class="slide-text">Kronospan-Smorgon signed a deal with BERSEY in Belarus</h3>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plant construction(60MW) will commence in 2017</h5>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide2" src="../../images/belarus.jpg">
-				<div class="caption left-align">
-					<h5 class="slide-text">Pinskdrev signed a deal with BERSEY</h3>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Construction will commence soon.</h5>
-				</div>
-			</a>
+			<img id="slide2" src="../../images/belarus.jpg">
+			<div class="caption left-align">
+				<h5 class="slide-text">Pinskdrev signed a deal with BERSEY</h3>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Construction will commence soon.</h5>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide3" src="../../images/slide3.jpg"> 
-				<div class="caption right-align">
-					<h5 class="slide-text">Ongoing projects in Romania and Russia</h3>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plants</h5>
-				</div>
-			</a>
+			<img id="slide3" src="../../images/slide3.jpg"> 
+			<div class="caption right-align">
+				<h5 class="slide-text">Ongoing projects in Romania and Russia</h3>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plants</h5>
+			</div>
 		</li>
 		<li>
-			<a href="">
-				<img id="slide4" src="../../images/slide4.jpg"> 
-				<div class="caption center-align">
-					<h5 class="slide-text">Research colobration with CNRS laboratory in France</h3>
-					<h6 class="light grey-text text-lighten-3 slide-subtext">Innovation Projects</h5>
-				</div>
-			</a>
+			<img id="slide4" src="../../images/slide4.jpg"> 
+			<div class="caption center-align">
+				<h5 class="slide-text">Research colobration with CNRS laboratory in France</h3>
+				<h6 class="light grey-text text-lighten-3 slide-subtext">Innovation Projects</h5>
+			</div>
 		</li>
 	</ul>
 </div>
@@ -85,7 +77,7 @@
 		<div class="row">
 			<div class="col s12 center">
 				<!-- <h3><i class="mdi-content-send brown-text"></i></h3> -->
-				<h5 class="center">LEADING HEAT GENERATION SYSTEMS</h5>
+				<h5 class="center">LEADING HEAT GENERATION SYSTEMS PRODUCER</h5>
 				<br>
 				<p class="justify-align light">Bersey Limited Company, established in 1979, is an engineering company serving to different process industries where heat generation is required. Bersey designs and delivers turn-key heat generation systems that are oil fired, gas fired, waste fired, biomass fired, oil and gas co-fired. It is our main priority to supply "engineered solutions" to our costumers along with quality satisfaction conforming with the international codes and standards that apply. </p>
 				<p class="justify-align light">Our robust engineering and technical background combined with experience gained over the last 40 years, has made us a reliable solution-partner in various projects. Today Bersey produces various applications to major industries such as Wood and Wood Products Industries, Paper and Pulp Industries, Chemical Industry, Textile Industry, Vegetable Oil Production Plants, Plastics and Packaging Industries.</p>
