--- a/views/en/products/scotch.erb
+++ b/views/en/products/scotch.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="col s12 m6">
 			<div class="card-panel teal white">
-				<h5 class="black-text">3 PASS SCOTCH TYPE BOILERS</h5>
+				<h5 class="black-text">HOT WATER AND STEAM BOILERS</h5>
 				<div class="divider blue-grey darken-4"></div>
 				<br>
 				<p class="black-text justify-align">For the production of hot water, superheated water and steam, scotch type boilers fired with oil, gas and a combination of both, are within our manufacturing capability with high efficient 3 pass design, various production capacity and pressure ratings.</p>
@@ -16,8 +16,8 @@
 				<h5 class="black-text">SCOTCH TYPE BOILERS</h5>
 				<div class="divider blue-grey darken-4"></div>
 				<br>
-				<img class="responsive-img" src="/images/factory.jpg">
-				<img class="responsive-img" src="/images/factory.jpg">
+				<img class="responsive-img" src="/images/skoc/skoc1.jpg">
+				<img class="responsive-img" src="/images/skoc/skoc2.jpg">
 			</div>
 		</div>
 	</div>
