--- a/views/en/products/thermal.erb
+++ b/views/en/products/thermal.erb
@@ -2,12 +2,15 @@
 	<div class="container">
 		<div class="col s12 m6">
 			<div class="card-panel teal white">
-				<h5 class="black-text">WHY THERMAL OIL HEATERS ?</h5>
+				<h5 class="black-text">THERMAL OIL BOILERS</h5>
 				<div class="divider blue-grey darken-4"></div>
 				<br>
-				<p class="black-text justify-align">In many different industrial processes where the production is carried out with heat exchange at high temperatures, conventional methods such as superheated water and steam can meet the requirements. The utilization of water and steam usually implies high operating, maintenance costs and system monitoring requirements due to pre-treatment of process water.</p>
+				<p class="black-text justify-align">In many different industrial processes where the production is carried out with heat exchange at high temperatures, conventional methods such as superheated water and steam boilers may be sufficient to meet the process requirements. However the utilization of water and steam usually implies high operating, maintenance costs and system monitoring requirements due to pre-treatment of process water.</p>
+				<br>
 				<p class="black-text justify-align">Thermal Oil Application is an alternative and a cost-effective solution for reaching elevated temperatures at low operating pressures for multiple heat receivers in the process.</p>
-				<h5 class="black-text">ADVANTAGES OF THERMAL OIL HEATERS</h5>
+				<br>
+				<h6 class="black-text">ADVANTAGES OF THERMAL OIL BOILERS</h6>
+				<div class="divider blue-grey darken-4"></div>
 				<ul class="black-text">
 					<li class="thermal-list">High temperature with atmospheric pressure</li>
 					<li class="thermal-list"><b>Secondary circuit applications allow:</b></li>
@@ -21,11 +24,11 @@
 		</div>
 		<div class="col s12 m6">
 			<div class="card-panel teal white"> 
-				<h5 class="black-text">THERMAL OIL HEATERS</h5>
+				<h5 class="black-text">OUR THERMAL OIL BOILERS</h5>
 				<div class="divider blue-grey darken-4"></div>
 				<br>
-				<img class="responsive-img" src="/images/factory.jpg">
-				<img class="responsive-img" src="/images/factory.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin1.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin2.jpg">
 			</div>
 		</div>
 	</div>
