--- a/views/urunler/skoc.erb
+++ b/views/urunler/skoc.erb
@@ -11,7 +11,7 @@
 				<br>
 				<p class="black-text justify-align">Alev-Duman borulu, Ön ocaklı Alev-Duman borulu ve Su borulu kazan olmak üzere farklı dizayn seçeneklerimiz mevcuttur.</p>
 				<br>
-				<p class="black-text justify-align">Stoker feeding, reciprocating moving grate and inclined fixed grate combinations allow firing coal and various biomass fuels such as sunflower hulls, cottonseed hulls, olive kernels, apricot kernels, wood and wood wastes.</p>
+				<p class="black-text justify-align">Atık ısı kazanı, kızgın yağ ısıtmalı buhar jenaratörü ve buhar ısıtmalı sıcak su eşanjörleri diğer ürün seçeneklerimiz arasındadır.</p>
 			</div>
 		</div>
 		<div class="col s12 m6">
