--- a/views/en/products.erb
+++ b/views/en/products.erb
@@ -3,19 +3,9 @@
     <div class="row">
       <div class="col s12">
         <div class="collection" id="collection-products">
-          <a href="./products/scotch" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>SCOTCH TYPE STEAM BOILERS</a>
+          <a href="/en/products/scotch" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>HOT WATER AND STEAM BOILERS</a>
           <br>
-          <a href="./products/thermal" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>THERMAL OIL HEATERS</a>
-          <br>
-          <a href="./products/waterpipe" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>WATER TUBE STEAM BOILERS</a>
-          <br>
-          <a href="./products/fluidized" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>FLUIDIZED BED STEAM BOILER</a>
-          <br>
-          <a href="./products/wasteheat" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>WASTE HEAT BOILERS</a>
-          <br>
-          <a href="./products/hotwater" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>HOT WATER BOILERS</a>
-          <br>
-          <a href="./products/biomass" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>BIOMASS FUEL BOILERS</a>
+          <a href="/en/products/thermal" class="collection-item"><span class="badge"><i class="material-icons secondary-content">chevron_right</i></span>THERMAL OIL HEATERS</a>
           <br>
         </div>
       </div> 
