--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="tr">
 <head>
 	<title>BERSEY</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -12,6 +12,11 @@
 <!--   Navbar Section   -->
 <header>
 	<div class="navbar-fixed">
+		<!-- Dropdown Structure -->
+		<ul id="dropdown1" class="dropdown-content">
+		  <li><a href="/en/">EN</a></li>
+		  <li><a href="/ru/">RU</a></li>
+		</ul>
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
 				<ul class="left">
@@ -36,6 +41,8 @@
 					<!-- <li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li> -->
 					<!-- <li><a href="/career" class="nav-btn"><strong>CAREERS</strong></a></li> -->
 					<li><a href="/iletisim" class="nav-btn">İLETİŞİM</a></li>
+					<!-- Dropdown Trigger -->
+    				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">TR<i class="material-icons right">arrow_drop_down</i></a></li>
 				</ul>
 				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small material-icons">menu</i></a>
 			</div>
