--- a/views/ru/Svyazatsyasnami.erb
+++ b/views/ru/Svyazatsyasnami.erb
@@ -39,8 +39,8 @@
 				</div>
 			</div>
 			<div class="row right">
-				<button class="btn waves-effect waves-light" id="contact-submit" type="submit" name="action">Submit
-					<i class="material-icons right">Отправить</i>
+				<button class="btn waves-effect waves-light" id="contact-submit" type="submit" name="action">Отправить
+					<i class="material-icons right">send</i>
 				</button>
 			</div>			           
 		</form>      
