--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -4131,7 +4131,9 @@ nav ul li.active {
 }
 
 nav ul li.active a{
-  color: white;
+  color: #000;
+  text-align: center;
+  font-size: 14px;
 }
 
 nav ul a {
