--- a/views/ru/layout_ru.erb
+++ b/views/ru/layout_ru.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<title>BERSEY</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -12,6 +12,11 @@
 <!--   Navbar Section   -->
 <header>
 	<div class="navbar-fixed">
+		<!-- Dropdown Structure -->
+		<ul id="dropdown1" class="dropdown-content">
+		  <li><a href="/">TR</a></li>
+		  <li><a href="/en/">EN</a></li>
+		</ul>
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
 				<ul class="left">
@@ -20,24 +25,27 @@
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
-					<li><a href="/">HOME</a></li>
-					<li><a href="/aboutus">ABOUT US</a></li>
-					<li><a href="/products">PRODUCTS</a></li>
-					<li><a href="/references">REFERENCES</a></li>
+					<li><a href="/ru/">дом</a></li>
+					<li><a href="/ru/naschetnas">насчет нас</a></li>
+					<li><a href="/ru/produkt">товары</a></li>
+					<li><a href="/ru/ssylka">Ссылки</a></li>
 					<!-- <li><a href="/projects">PROJECTS</a></li> -->
 					<!-- <li><a href="/career">CAREERS</a></li> -->
-					<li><a href="/contactus">CONTACT</a></li>
+					<li><a href="/ru/svyazatsyasnami">контакт</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
-					<li><a href="/" class="nav-btn">HOME</a></li>
-					<li><a href="/aboutus" class="nav-btn">ABOUT US</a></li>
-					<li><a href="/products" class="nav-btn">PRODUCTS</a></li>
-					<li><a href="/references" class="nav-btn">REFERENCES</a></li>
+					<li><a href="/ru/" class="nav-btn">дом</a></li>
+					<li><a href="/ru/naschetnas" class="nav-btn">насчет нас</a></li>
+					<li><a href="/ru/produkt" class="nav-btn">товары</a></li>
+					<li><a href="/ru/ssylka" class="nav-btn">Ссылки</a></li>
 					<!-- <li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li> -->
 					<!-- <li><a href="/career" class="nav-btn"><strong>CAREERS</strong></a></li> -->
-					<li><a href="/contactus" class="nav-btn">CONTACT</a></li>
+					<li><a href="/ru/svyazatsyasnami" class="nav-btn">контакт</a></li>
+						 <!-- Dropdown Trigger -->
+    				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">RU<i class="material-icons right">arrow_drop_down</i></a></li>
 				</ul>
-				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small material-icons">menu</i></a>
+				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small materia
+				l-icons">menu</i></a>
 			</div>
 		</nav>
 	</div>
