--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,6 +25,7 @@
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
+					<li><a href="/" style="display: inline-block; background-color: #bdbdbd">TR</a><a href="/en/" style="display: inline-block;">EN</a><a href="/ru/" style="display: inline-block;">RU</a></li>
 					<li><a href="/">ANA SAYFA</a></li>
 					<li><a href="/hakkimizda">HAKKIMIZDA</a></li>
 					<li><a href="/urunler">ÜRÜNLER</a></li>
