--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -4070,6 +4070,7 @@ nav .brand-logo {
   font-size: 2.1rem;
   padding: 0;
   white-space: nowrap;
+  padding: 0px 8px 9px 0px;
 }
 
 nav .brand-logo.center {
