--- a/views/anasayfa.erb
+++ b/views/anasayfa.erb
@@ -155,7 +155,7 @@
 				<p class="grey-text text-lighten-1">Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
 				<p class="grey-text text-lighten-1">T: +90 212 693 74 74</p>
 				<p class="grey-text text-lighten-1">F: +90 212 495 48 50</p>
-				<p class="grey-text text-lighten-1">info@berseykazan.com</p>
+				<p class="grey-text text-lighten-1"><a href="mailto:info@berseykazan.com">info@berseykazan.com</a></p>
 			</div>
 			<div class="col l3 s12">
 				<h5 class="grey-text text-lighten-2">Yasal Uyarı</h5>
