--- a/views/ru/layout_ru.erb
+++ b/views/ru/layout_ru.erb
@@ -20,11 +20,12 @@
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
 				<ul class="left">
-					<a href="/" class="brand-logo">
+					<a href="/ru/" class="brand-logo">
 						<img src="/images/bersey.png" id="logo"></img>
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
+					<li><a href="/" style="display: inline-block">TR</a><a href="/en/" style="display: inline-block;">EN</a><a href="/ru/" style="display: inline-block; background-color: #bdbdbd">RU</a></li>
 					<li><a href="/ru/">дом</a></li>
 					<li><a href="/ru/naschetnas">насчет нас</a></li>
 					<li><a href="/ru/produkt">товары</a></li>
@@ -44,8 +45,7 @@
 						 <!-- Dropdown Trigger -->
     				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">RU<i class="material-icons right">arrow_drop_down</i></a></li>
 				</ul>
-				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small materia
-				l-icons">menu</i></a>
+				<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="small material-icons">menu</i></a>
 			</div>
 		</nav>
 	</div>
