Ready for review

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,8 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @font-face {
   font-family: 'Roboto';
-  src: url('../fonts/roboto/Roboto-Light.woff') format('woff'),
-  url('../fonts/roboto/Roboto-Light.woff2') format('woff2');
+  src: url('roboto.eot'); /* IE9 Compat Modes */
+  src: url('roboto.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('roboto.woff') format('woff'), /* Modern Browsers */
+  url('roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
+  url('roboto.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: normal;
   font-style: normal;
 }
@@ -59,7 +62,9 @@
   margin-right: 5px;
   display: inline-block;
   color: #0099ff;
-  font-family: "Times New Roman" , sans-serif;
+  font-family: "Roboto" , sans-serif;
+  font-weight: 700;
+  font-style: normal;
   font-size: 4.2em;
   opacity: 1;
   transition: all 3s ease;
@@ -330,7 +335,7 @@ body .side-nav a{
   z-index: -100;
 }
 div.referencesbody > table.striped > tbody > tr > td.costumers{
-  text-align: left;
+  text-align: center;
 }
 .referencesheader{
   font-weight: 600;
@@ -419,10 +424,7 @@ ul.black-text li.thermal-list{
   height: 10%;
 }
 
-#linkedin{
-  width:15%;
-  height:auto;
-}
+
 
 
 
