--- a/views/anasayfa.erb
+++ b/views/anasayfa.erb
@@ -42,7 +42,7 @@
 		<li>
 			<img id="slide1" src="./images/belarus3.jpg"> 
 			<div class="caption left-align flow-text">
-				<h5 class="slide-text">Kronospan, Belarus'taki yeni tesisi için BERSEY ile antlaşmaya vard</h5>
+				<h5 class="slide-text">Kronospan, Belarus'taki yeni tesisi için BERSEY ile antlaşmaya vardı</h5>
 				<h6 class="light grey-text text-lighten-3 slide-subtext">Power Plant construction(60MW) </h6>
 			</div>
 		</li>
@@ -160,13 +160,13 @@
 			<div class="col l3 s12">
 				<h5 class="grey-text text-lighten-2">Yasal Uyarı</h5>
 				<ul>
-					<li><a class="grey-text text-lighten-1" href="/terms">Şartlar ve Koşullar</a></li>
+					<li><a class="grey-text text-lighten-1" href="/sartlar">Şartlar ve Koşullar</a></li>
 				</ul>
 			</div>
 			<div class="col l3 s12">
 				<h5 class="grey-text text-lighten-2">Bizi Takip Edin</h5>
 				<ul>
-					<li><a class="white-text" href="https://www.linkedin.com/company-beta/10671411/" target=_blank><img id="linkedin" src=./images/linkedin.png></a></li>
+					<li><a href="https://www.linkedin.com/in/ali-yilmaz-7060321a/detail/recent-activity/" target=_blank><img class="linkedin" src=./images/linkedin.png></a></li>
 				</ul>
 			</div>
 		</div>
