--- a/views/en/home.erb
+++ b/views/en/home.erb
@@ -165,7 +165,7 @@
 			<div class="col l3 s12">
 				<h5 class="grey-text text-lighten-2">Follow Us</h5>
 				<ul>
-					<li><a class="white-text" href="https://www.linkedin.com/company-beta/10671411/" target=_blank><img id="linkedin" src=../../images/linkedin.png></a></li>
+					<li><a href="https://www.linkedin.com/in/ali-yilmaz-7060321a/detail/recent-activity/" target=_blank><img class="linkedin" src=../../images/linkedin.png></a></li>
 				</ul>
 			</div>
 		</div>
