--- a/views/en/layout_en.erb
+++ b/views/en/layout_en.erb
@@ -15,17 +15,17 @@
 	<!-- Dropdown Structure -->
 		<ul id="dropdown1" class="dropdown-content">
 		  <li><a href="/">TR</a></li>
-		  <li><a href="/ru/">RU</a></li>
+		  <li><a href="/ru">RU</a></li>
 		</ul>
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
 				<ul class="left">
-					<a href="/en/" class="brand-logo">
+					<a href="/en" class="brand-logo">
 						<img src="/images/bersey.png" id="logo"></img>
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
-					<li><a href="/" style="display: inline-block">TR</a><a href="/en/" style="display: inline-block; background-color: #bdbdbd;">EN</a><a href="/ru/" style="display: inline-block;">RU</a></li>
+					<li><a href="/" style="display: inline-block">TR</a><a href="/en" style="display: inline-block; background-color: #bdbdbd;">EN</a><a href="/ru" style="display: inline-block;">RU</a></li>
 					<li><a href="/en/">HOME</a></li>
 					<li><a href="/en/aboutus">ABOUT US</a></li>
 					<li><a href="/en/products">PRODUCTS</a></li>
