--- a/views/en/terms.erb
+++ b/views/en/terms.erb
@@ -36,7 +36,7 @@
 
             <div class="divider"></div>
             <br>
-            <p>We retain to change our handling and use of information. However, we will not distribute your personal information (such as your name and address) without prior authorisation.</p>
+            <p>We retain the right to change our handling and use of information. However, we will not distribute your personal information (such as your name and address) without prior authorisation.</p>
 
             <div class="divider"></div>
             <br>
