--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,8 +14,8 @@
 	<div class="navbar-fixed">
 		<!-- Dropdown Structure -->
 		<ul id="dropdown1" class="dropdown-content">
-		  <li><a href="/en/">EN</a></li>
-		  <li><a href="/ru/">RU</a></li>
+		  <li><a href="/en">EN</a></li>
+		  <li><a href="/ru">RU</a></li>
 		</ul>
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
@@ -25,7 +25,7 @@
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
-					<li><a href="/" style="display: inline-block; background-color: #bdbdbd">TR</a><a href="/en/" style="display: inline-block;">EN</a><a href="/ru/" style="display: inline-block;">RU</a></li>
+					<li><a href="/" style="display: inline-block; background-color: #bdbdbd">TR</a><a href="/en" style="display: inline-block;">EN</a><a href="/ru" style="display: inline-block;">RU</a></li>
 					<li><a href="/">ANA SAYFA</a></li>
 					<li><a href="/hakkimizda">HAKKIMIZDA</a></li>
 					<li><a href="/urunler">ÜRÜNLER</a></li>
