--- a/views/ru/layout_ru.erb
+++ b/views/ru/layout_ru.erb
@@ -15,17 +15,17 @@
 		<!-- Dropdown Structure -->
 		<ul id="dropdown1" class="dropdown-content">
 		  <li><a href="/">TR</a></li>
-		  <li><a href="/en/">EN</a></li>
+		  <li><a href="/en">EN</a></li>
 		</ul>
 		<nav class="white" role="navigation">
 			<div class="nav-wrapper">
 				<ul class="left">
-					<a href="/ru/" class="brand-logo">
+					<a href="/ru" class="brand-logo">
 						<img src="/images/bersey.png" id="logo"></img>
 					</a>
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
-					<li><a href="/" style="display: inline-block">TR</a><a href="/en/" style="display: inline-block;">EN</a><a href="/ru/" style="display: inline-block; background-color: #bdbdbd">RU</a></li>
+					<li><a href="/" style="display: inline-block">TR</a><a href="/en" style="display: inline-block;">EN</a><a href="/ru" style="display: inline-block; background-color: #bdbdbd">RU</a></li>
 					<li><a href="/ru/">дом</a></li>
 					<li><a href="/ru/naschetnas">насчет нас</a></li>
 					<li><a href="/ru/produkt">товары</a></li>
@@ -35,7 +35,7 @@
 					<li><a href="/ru/svyazatsyasnami">контакт</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
-					<li><a href="/ru/" class="nav-btn">дом</a></li>
+					<li><a href="/ru" class="nav-btn">дом</a></li>
 					<li><a href="/ru/naschetnas" class="nav-btn">насчет нас</a></li>
 					<li><a href="/ru/produkt" class="nav-btn">товары</a></li>
 					<li><a href="/ru/ssylka" class="nav-btn">Ссылки</a></li>
