--- a/views/ru/dom.erb
+++ b/views/ru/dom.erb
@@ -149,7 +149,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col l6 s12">
-				<h5 class="grey-text text-lighten-2">Contact</h5>
+				<h5 class="grey-text text-lighten-2">контакт</h5>
 				<p class="grey-text text-lighten-1">BERSEY SINAI ve TIBBI CIHAZLAR IMALAT ve TIC. LTD. STI.</p>
 				<p class="grey-text text-lighten-1">Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
 				<p class="grey-text text-lighten-1">T: +90 212 693 74 74</p>
@@ -157,15 +157,15 @@
 				<p class="grey-text text-lighten-1"><a href="mailto:info@berseykazan.com">info@berseykazan.com</a></p>
 			</div>
 			<div class="col l3 s12">
-				<h5 class="grey-text text-lighten-2">Legal</h5>
+				<h5 class="grey-text text-lighten-2">легальный</h5>
 				<ul>
-					<li><a class="grey-text text-lighten-1" href="/ru/terms">Terms and Conditions</a></li>
+					<li><a class="grey-text text-lighten-1" href="/ru/terms">Условия и положения</a></li>
 				</ul>
 			</div>
 			<div class="col l3 s12">
-				<h5 class="grey-text text-lighten-2">Follow Us</h5>
+				<h5 class="grey-text text-lighten-2">Подписывайтесь на нас</h5>
 				<ul>
-					<li><a class="white-text" href="https://www.linkedin.com/company-beta/10671411/" target=_blank><img id="linkedin" src=../../images/linkedin.png></a></li>
+					<li><a href="https://www.linkedin.com/in/ali-yilmaz-7060321a/detail/recent-activity/" target=_blank><img class="linkedin" src=../../images/linkedin.png></a></li>
 				</ul>
 			</div>
 		</div>
