--- a/views/sartlar.erb
+++ b/views/sartlar.erb
@@ -1,46 +1,47 @@
 <div class="container">
     <div class="row">
         <div class="col l9">
-            <h3>Terms and Conditions</h3>
+            <h3>Şartlar ve Koşullar</h3>
 
             <div class="divider"></div>
 
-            <h5>General</h5>
-            <p>BERSEY is aware of the necessity for comprehensive privacy protection on the Internet. With this declaration, we seek to inform you how we deal with information and data that we receive from you when you access our website (hereafter referred to as "information").</p>
+            <h5>Genel Koşullar</h5>
+            <p>BERSEY LTD. ŞTİ., internet üzerinde kapsamlı gizlilik korumasının gerekliliğinin farkındadır. Bu beyan ile, web sitemize eriştiğinizde (bundan sonra "bilgi" olarak anılacaktır) sizden aldığımız bilgi ve verileri nasıl kullanacağımızı size aktarmak istiyoruz.</p>
                 
             <div class="divider"></div>
 
-            <h5>Privacy</h5>
-            <p>Information that we receive from you or about you will be handled in a strictly confidential manner. This information enables us to customise and improve our services in accordance with your needs. When you visit our website, we collect and save the following information:
-            <h6>1. Information you provide</h6> 
-            <p>This includes all information that you provide while using our website.</p>
-            <h6>2.  E-Mail addresses</h6>
-            <p> E-Mail addresses that we collect, store and use are utilised to send you information of many sorts (for example, technical developments, sales, sales conditions, advertising material). If you do not agree to this, please notify us here: info@berseykazan.com</p>
-            <h6>3. Data that we automatically receive</h6> 
-            <p>Whenever you visit our website, we automatically receive information that we store. This particularly applies to cookies as well as other data about your web browser. We retain the right to use additional technologies to analyse our website's user groups via the automatic collection and storage of information, or to identify specific users.</p>
+            <h5>Gizlilik</h5>
+            <p>Sizden veya hakkınızda aldığımız bilgiler kesinlikle Kişisel Verilerin Korunması Kanunu'na uygun şekilde ele alınacaktır. Bu bilgiler, hizmetlerimizi ihtiyaçlarınıza göre özelleştirmemizi ve geliştirmemizi sağlar. Web sitemizi ziyaret ettiğinizde aşağıdaki bilgileri toplayabiliriz ve saklayabiliriz:
+
+            <h6>1. Verdiğiniz bilgiler</h6> 
+            <p>Bu, websitemizi kullanırken verdiğiniz tüm bilgileri içerir.</p>
+            <h6>2.  E-Mail adresleri</h6>
+            <p> Topladığımız, sakladığımız ve kullandığımız e-posta adresleri size birçok türde bilgi göndermek için kullanılabilir (örneğin, teknik gelişmeler, satış, satış koşulları, reklam malzemeleri). Bunu kabul etmiyorsanız, lütfen bize "info@berseykazan.com" adresinden ulaşın:</p>
+            <h6>3. Otomatik olarak topladığımız veriler</h6> 
+            <p>Web sitemizi her ziyaret ettiğinizde, sakladığımız bilgileri otomatik olarak yükleriz. Bu çerezlerin yanı sıra web tarayıcınızla ilgili diğer veriler için de geçerlidir. Bilgilerin otomatik olarak toplanması ve depolanması yoluyla web sitemizin kullanıcı gruplarını analiz etmek veya belirli kullanıcıları tanımlamak için ek teknolojiler kullanma hakkımız saklıdır.</p>
 
             <div class="divider"></div>
 
-            <h5>Cookies</h5>
-            <p>Cookies are a technical method that allows us to know whether a user has visited our website in the past. Most browsers inform you about cookies, how to deal with them, and how they can be changed, identified or turned off. If you choose to delete your cookies, this could limit the user-friendliness of our website during your next visit.</p>
+            <h5>Çerezler</h5>
+            <p>Çerezler, bir kullanıcının geçmişte web sitemizi ziyaret edip etmediğini bilmemizi sağlayan teknik bir yöntemdir. Çoğu tarayıcı size çerezlerin nasıl değiştirilebileceği, tanımlanabileceği veya kapatılabileceği hakkında bilgi verir. Çerezlerinizi silmeyi seçerseniz, bu, bir sonraki ziyaretinizde web sitemizin kullanım kolaylığını sınırlayabilir.</p>
 
             <div class="divider"></div>
 
-            <h5>Use of information we receive from you</h5>
-            <p>We will not pass on information that you provide to us to third parties by any means. In order for us to optimise our services for you, we nonetheless retain the right to disseminate information obtained from you in any way, partially or in its entirety, to companies that support our services on the Internet, and - insofar as we are required to by law - to other institutions (such as public agencies or courts).</p>
+            <h5>Sizden aldığımız bilgilerin kullanımı</h5>
+            <p>Bize sağladığınız bilgileri hiçbir şekilde üçüncü şahıslar ile izininiz olmadan paylaşmayacağız. Hizmetlerimizi sizin için optimize edebilmemiz için, gerektiği şartlarda, sizden elde edilen bilgileri, kısmen veya bütünüyle, internet'teki hizmetlerimizi destekleyen şirketler ile paylaşma hakkımızı saklı tutarız - kanunlar gerektirdiği takdirde - kamu kuruluşları da bu kapsamdadır.</p>
 
             <div class="divider"></div>
             
-            <h5>Access to data and unsubscription</h5>
-            <p>If you would like to know what information we have stored about you and your visit to our website, please contact us at info@berseykazan.com</p>
+            <h5>Verilere ulaşım</h5>
+            <p>Sizinle ve web sitemizi ziyaretinizle ilgili hangi bilgileri sakladığımızı bilmek isterseniz, lütfen bize "info@berseykazan.com" adresinden ulaşın:</p>
 
             <div class="divider"></div>
             <br>
-            <p>We retain to change our handling and use of information. However, we will not distribute your personal information (such as your name and address) without prior authorisation.</p>
+            <p>Bilgilerin işlenmesi ve kullanılması ile ilgili değişiklik yapma hakkımız saklıdır. Ancak, önceden izin almadan kişisel bilgilerinizi (adınız ve adresiniz gibi) kesinlikle paylaşmayacağız.</p>
 
             <div class="divider"></div>
             <br>
-            <p>For further information, please contact:</p>
+            <p>Daha fazla bilgi için, lütfen bizle irtibata geçin:</p>
             <b><p>BERSEY SINAI ve TIBBI CIHAZLAR IMALAT ve TIC. LTD. STI.</p>
                 <p>Söğütlüçeşme Mah. Halkalı Cad. No:257 Bina:4 Sefaköy, 34295</p>
                 <p>T: +90 212 693 74 74</p>
