--- a/views/ru/Svyazatsyasnami.erb
+++ b/views/ru/Svyazatsyasnami.erb
@@ -4,7 +4,7 @@
 	<div id="confirm"><%= flash[:confirm] %></div>
 	<% end %>
 	<div class="row">
-		<form class="col l6 push-l3" id ="form" action="/contactus" method="POST">
+		<form class="col l6 push-l3" id ="form" action="/svyazatsyasnami" method="POST">
 			<div class="row">
 				<h4 class="left-align" id="form-heading">СВЯЗАТЬСЯ С НАМИ</h4>
 				<div class="input-field col s6">
