--- a/views/ru/layout_ru.erb
+++ b/views/ru/layout_ru.erb
@@ -32,7 +32,7 @@
 					<li><a href="/ru/ssylka">Ссылки</a></li>
 					<!-- <li><a href="/projects">PROJECTS</a></li> -->
 					<!-- <li><a href="/career">CAREERS</a></li> -->
-					<li><a href="/ru/svyazatsyasnami">контакт</a></li>
+					<li><a href="/ru/svyazat">контакт</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
 					<li><a href="/ru" class="nav-btn">дом</a></li>
@@ -41,7 +41,7 @@
 					<li><a href="/ru/ssylka" class="nav-btn">Ссылки</a></li>
 					<!-- <li><a href="/projects" class="nav-btn"><strong>PROJECTS</strong></a></li> -->
 					<!-- <li><a href="/career" class="nav-btn"><strong>CAREERS</strong></a></li> -->
-					<li><a href="/ru/svyazatsyasnami" class="nav-btn">контакт</a></li>
+					<li><a href="/ru/svyazat" class="nav-btn">контакт</a></li>
 						 <!-- Dropdown Trigger -->
     				<li><a class="dropdown-button" href="#!" data-activates="dropdown1">RU<i class="material-icons right">arrow_drop_down</i></a></li>
 				</ul>
