--- a/views/en/products/thermal.erb
+++ b/views/en/products/thermal.erb
@@ -27,8 +27,8 @@
 				<h5 class="black-text">OUR THERMAL OIL BOILERS</h5>
 				<div class="divider blue-grey darken-4"></div>
 				<br>
-				<img class="responsive-img" src="/images/kizgin/kizgin1.jpg">
-				<img class="responsive-img" src="/images/kizgin/kizgin2.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin_1.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin_2.jpg">
 			</div>
 		</div>
 	</div>
