--- a/views/referanslar.erb
+++ b/views/referanslar.erb
@@ -1427,7 +1427,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td class="costumers">TURYAG - BALIKESIR YAG FABRIKASI</td>
+										<td class="costumers">TURYAG - BALIKESIR YAĞ FABRIKASI</td>
 										<td>FLUIDIZED BED STEAM BOILER - COMPLETE BOILER ROOM 2 X 10(ton/h)</td>
 										<td>BALIKESIR</td>
 									</tr>
