--- a/views/urunler/termal.erb
+++ b/views/urunler/termal.erb
@@ -21,7 +21,7 @@
 				<p class="black-text justify-align">Bu sistemlerin uygun dizaynı sayesinde yüksek randıman, çevre şartlarına uygun yanma ve filtrasyon, kesintisiz ve uzun süre çalışma imkanı sağlayarak, 40 yılı aşkın bir süredir müşterilerimizin ihtiyaçlarına cevap vermekteyiz.
 				</p>
 				<br>
-				<img class="responsive-img" src="/images/kizgin/kizgin1.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin_1.jpg">
 			</div>
 		</div>
 		<div class="col s12 m6">
@@ -45,7 +45,7 @@
 					<li class="thermal-list">Refrakterli üst yanma ocağı, sipiral sarımlı dik tek serpantinli radyasyon kazanı ve firkete serpantinli konveksiyon kazanı bulunmaktadır.</li>
 				</ul>
 				<br>
-				<img class="responsive-img" src="/images/kizgin/kizgin2.jpg">
+				<img class="responsive-img" src="/images/kizgin/kizgin_2.jpg">
 			</div>
 		</div>
 	</div>
