--- a/views/en/layout_en.erb
+++ b/views/en/layout_en.erb
@@ -26,7 +26,7 @@
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
 					<li><a href="/" style="display: inline-block">TR</a><a href="/en" style="display: inline-block; background-color: #bdbdbd;">EN</a><a href="/ru" style="display: inline-block;">RU</a></li>
-					<li><a href="/en/">HOME</a></li>
+					<li><a href="/en">HOME</a></li>
 					<li><a href="/en/aboutus">ABOUT US</a></li>
 					<li><a href="/en/products">PRODUCTS</a></li>
 					<li><a href="/en/references">REFERENCES</a></li>
@@ -35,7 +35,7 @@
 					<li><a href="/en/contactus">CONTACT</a></li>
 				</ul>
 				<ul id="navbar" class="right hide-on-med-and-down">
-					<li><a href="/en/" class="nav-btn">HOME</a></li>
+					<li><a href="/en" class="nav-btn">HOME</a></li>
 					<li><a href="/en/aboutus" class="nav-btn">ABOUT US</a></li>
 					<li><a href="/en/products" class="nav-btn">PRODUCTS</a></li>
 					<li><a href="/en/references" class="nav-btn">REFERENCES</a></li>
