--- a/views/ru/layout_ru.erb
+++ b/views/ru/layout_ru.erb
@@ -26,7 +26,7 @@
 				</ul>
 				<ul id="mobile-demo" class="side-nav">
 					<li><a href="/" style="display: inline-block">TR</a><a href="/en" style="display: inline-block;">EN</a><a href="/ru" style="display: inline-block; background-color: #bdbdbd">RU</a></li>
-					<li><a href="/ru/">дом</a></li>
+					<li><a href="/ru">дом</a></li>
 					<li><a href="/ru/naschetnas">насчет нас</a></li>
 					<li><a href="/ru/produkt">товары</a></li>
 					<li><a href="/ru/ssylka">Ссылки</a></li>
